[workspace]
members = ["server", "passkeys", "ee/licenses", "ee/relying-parties"]
resolver = "2"

[workspace.dependencies]
cozyauth-passkeys = { path = "./passkeys" }
cozyauth-licenses = { path = "./ee/licenses" }
cozyauth-relying-parties = { path = "./ee/relying-parties" }
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.5"
tokio = "1.37.0"
serde = "1.0.202"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http-body-util = "0.1.1"
mime = "0.3.17"
tower = "0.4.13"
sqlx = "0.7.4"
