[package]
name = "cozyauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
