[package]
name = "cozyauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.8.0"
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation",
] }
