[package]
name = "cozyauth-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.8.0"
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation",
] }
