[package]
name = "cozyauth-passkeys"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "json",
  "chrono",
  "macros",
] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
webauthn-rs = { version = "0.5.0", features = [
  "danger-allow-state-serialisation",
] }

[dev-dependencies]
http-body-util = { workspace = true }
mime = { workspace = true }
tower = { workspace = true, features = ["util"] }
