[package]
name = "cozyauth-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
cozyauth-passkeys = { workspace = true }
cozyauth-licenses = { workspace = true, optional = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
ee = ["dep:cozyauth-licenses"]
