[package]
name = "cozyauth-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
cozyauth-passkeys = { workspace = true }
cozyauth-relying-parties = { workspace = true, optional = true }
cozyauth-licenses = { workspace = true, optional = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
http-body-util = { workspace = true }
mime = { workspace = true }
tower = { workspace = true, features = ["util"] }

[features]
ee = ["dep:cozyauth-relying-parties", "dep:cozyauth-licenses"]
