[package]
name = "supapasskeys-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
uuid = { version = "1.7.0", features = ["v4"] }
