[package]
name = "cozyauth-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
