[package]
name = "cozyauth_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cozyauth_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }
