[package]
name = "cozyauth_passkeys"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cozyauth_passkeys"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
serde_json = "1.0.117"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }
