[package]
name = "supapasskeys_webauthn"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "supapasskeys_webauthn"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = {version = "0.30.0", features = ["nif_version_2_17"]}
serde_cbor = "0.11.2"
serde_json = "1.0.108"
thiserror = "1.0.50"
webauthn-rs = {version = "0.4.8", features = ["danger-allow-state-serialisation"]}
