[package]
name = "supapasskeys_webauthn"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "supapasskeys_webauthn"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4"] }
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
